compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__record_update_unknown_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2531
expression: "\npub record Wibble {\n  Wibble(wibble: Int, wubble: Bool)\n  Wobble(wobble: Int, wubble: Bool)\n}\n\npub fn wibble(value: Wibble) {\n  Wibble(..value, wubble: True)\n}\n"
---
----- SOURCE CODE

pub record Wibble {
  Wibble(wibble: Int, wubble: Bool)
  Wobble(wobble: Int, wubble: Bool)
}

pub fn wibble(value: Wibble) {
  Wibble(..value, wubble: True)
}


----- ERROR
error: Unsafe record update
  ┌─ /src/one/two.rakun:8:12
  │
8 │   Wibble(..value, wubble: True)
  │            ^^^^^ I'm not sure this is always a `Wibble`


This value cannot be used to build an updated `Wibble` as it could be some
other variant.

Consider pattern matching on it with a case expression and then
constructing a new record with its values.
